@@ -55,6 +55,7 @@ export(manifestNew, getManifest, getProbeData, getProbeInfo, getManifestInfo,
        getControlAddress, getRed, getGreen, getMeth, getUnmeth,
        getBeta, getM, dmpFinder, mdsPlot, plotCpg, preprocessRaw,
        normalize.illumina.control, bgcorrect.illumina, preprocessIllumina,
+       preprocessSwan, 
        detectionP, qcReport, controlStripPlot, densityBeanPlot, densityPlot,
        read.450k, read.450k.sheet, read.450k.exp, logit2, ilogit2,
        MethylSet, RGChannelSet, RGChannelSetExtended)
